--- a/movies-api/src/main/resources/application.properties
+++ b/movies-api/src/main/resources/application.properties
@@ -5,5 +5,8 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/mo
 spring.datasource.username=root
 spring.datasource.password=secret
 
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=beans,env,health,info,metrics,mappings,prometheus
 management.endpoint.health.show-details=always
+
+springdoc.show-actuator=true
+springdoc.swagger-ui.groups-order=DESC
