--- a/movies-api/pom.xml
+++ b/movies-api/pom.xml
@@ -17,8 +17,7 @@
     <properties>
         <logstash.version>6.4</logstash.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
-        <springfox.version>2.9.2</springfox.version>
-        <docker.image.prefix>docker.mycompany.com</docker.image.prefix>
+        <springdoc.openapi-ui.version>1.4.1</springdoc.openapi-ui.version>
     </properties>
 
     <dependencies>
@@ -63,16 +62,11 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Swagger2 -->
+        <!-- SpringDoc OpenApi -->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>${springfox.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>${springfox.version}</version>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc.openapi-ui.version}</version>
         </dependency>
 
         <dependency>
@@ -97,22 +91,5 @@
             </exclusions>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <layers>
-                        <enabled>true</enabled>
-                    </layers>
-                    <image>
-                        <name>${docker.image.prefix}/${project.artifactId}:${project.version}</name>
-                    </image>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
