--- a/movies-api/pom.xml
+++ b/movies-api/pom.xml
@@ -17,7 +17,7 @@
     <properties>
         <logstash.version>6.4</logstash.version>
         <mapstruct.version>1.3.1.Final</mapstruct.version>
-        <springdoc.openapi-ui.version>1.4.2</springdoc.openapi-ui.version>
+        <springdoc.openapi-ui.version>1.4.3</springdoc.openapi-ui.version>
     </properties>
 
     <dependencies>
@@ -31,7 +31,7 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -65,7 +65,7 @@
         <!-- SpringDoc OpenApi -->
         <dependency>
             <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
+            <artifactId>springdoc-openapi-webflux-ui</artifactId>
             <version>${springdoc.openapi-ui.version}</version>
         </dependency>
 
@@ -89,6 +89,11 @@
                     <artifactId>junit-vintage-engine</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
