--- a/movies-api/src/main/resources/application.properties
+++ b/movies-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=movies-api
 spring.main.banner-mode=OFF
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/moviesdb?autoReconnect=true&useSSL=false&useUnicode=yes&characterEncoding=UTF-8&useLegacyDatetimeCode=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/moviesdb?characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=secret
 
