--- a/movies-api/src/main/resources/application.properties
+++ b/movies-api/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=secret
 
 management.endpoints.web.exposure.include=beans,env,health,info,metrics,mappings,prometheus
 management.endpoint.health.show-details=always
+management.health.probes.enabled=true
 
 springdoc.show-actuator=true
 springdoc.swagger-ui.groups-order=DESC
