--- a/movies-api/pom.xml
+++ b/movies-api/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <parent>
         <groupId>com.mycompany</groupId>
         <artifactId>springboot-elk-prometheus-grafana</artifactId>
@@ -15,9 +14,10 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <logstash.version>6.4</logstash.version>
+        <logstash.version>6.6</logstash.version>
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
-        <springdoc.openapi.version>1.5.5</springdoc.openapi.version>
+        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+        <springdoc-openapi.version>1.5.8</springdoc-openapi.version>
     </properties>
 
     <dependencies>
@@ -60,7 +60,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-webflux-ui</artifactId>
-            <version>${springdoc.openapi.version}</version>
+            <version>${springdoc-openapi.version}</version>
         </dependency>
 
         <dependency>
@@ -108,6 +108,11 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok-mapstruct-binding</artifactId>
+                            <version>${lombok-mapstruct-binding.version}</version>
                         </path>
                         <path>
                             <groupId>org.mapstruct</groupId>
