--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       start_period: 30s
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:7.9.3
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.13.1
     container_name: elasticsearch
     restart: unless-stopped
     ports:
@@ -36,7 +36,7 @@ services:
       start_period: 30s
 
   logstash:
-    image: docker.elastic.co/logstash/logstash:7.9.3
+    image: docker.elastic.co/logstash/logstash:7.13.1
     container_name: logstash
     restart: unless-stopped
     ports:
@@ -50,7 +50,7 @@ services:
       start_period: 30s
 
   kibana:
-    image: docker.elastic.co/kibana/kibana-oss:7.9.3
+    image: docker.elastic.co/kibana/kibana:7.13.1
     container_name: kibana
     restart: unless-stopped
     ports:
@@ -75,7 +75,7 @@ services:
       - logstash
 
   prometheus:
-    image: prom/prometheus:v2.27.0
+    image: prom/prometheus:v2.27.1
     container_name: prometheus
     restart: unless-stopped
     volumes:
@@ -87,7 +87,7 @@ services:
       start_period: 30s
 
   grafana:
-    image: grafana/grafana:7.5.6
+    image: grafana/grafana:8.0.1
     container_name: grafana
     restart: unless-stopped
     ports:
