--- a/movies-api/pom.xml
+++ b/movies-api/pom.xml
@@ -14,10 +14,10 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <logstash.version>6.6</logstash.version>
+        <logstash-logback-encoder.version>6.6</logstash-logback-encoder.version>
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <springdoc-openapi.version>1.5.9</springdoc-openapi.version>
+        <springdoc-openapi.version>1.5.10</springdoc-openapi.version>
     </properties>
 
     <dependencies>
@@ -42,11 +42,11 @@
             <artifactId>micrometer-registry-prometheus</artifactId>
         </dependency>
 
-        <!-- Logstash -->
+        <!-- Logstash-Logback Encoder -->
         <dependency>
             <groupId>net.logstash.logback</groupId>
             <artifactId>logstash-logback-encoder</artifactId>
-            <version>${logstash.version}</version>
+            <version>${logstash-logback-encoder.version}</version>
         </dependency>
 
         <!-- MapStruct -->
