--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
 
   mysql:
-    image: mysql:8.0.27
+    image: mysql:8.0.28
     container_name: mysql
     restart: unless-stopped
     ports:
@@ -24,6 +24,7 @@ services:
     environment:
       discovery.type: single-node
       xpack.security.enabled: false
+      ES_JAVA_OPTS: "-Xms512m -Xmx512m"
     healthcheck:
       test: "curl -f http://localhost:9200 || exit 1"
 
@@ -65,7 +66,7 @@ services:
       - logstash
 
   prometheus:
-    image: prom/prometheus:v2.32.1
+    image: prom/prometheus:v2.33.0
     container_name: prometheus
     restart: unless-stopped
     volumes:
@@ -76,7 +77,7 @@ services:
       test: [ "CMD", "nc", "-z", "localhost", "9090" ]
 
   grafana:
-    image: grafana/grafana:8.3.3
+    image: grafana/grafana:8.3.4
     container_name: grafana
     restart: unless-stopped
     ports:
