--- a/movies-api/src/main/resources/application.properties
+++ b/movies-api/src/main/resources/application.properties
@@ -14,3 +14,5 @@ management.health.probes.enabled=true
 springdoc.show-actuator=true
 springdoc.swagger-ui.groups-order=DESC
 springdoc.swagger-ui.disable-swagger-default-url=true
+
+logging.level.com.mycompany.moviesapi=DEBUG
