--- a/movies-api/src/main/resources/application.properties
+++ b/movies-api/src/main/resources/application.properties
@@ -15,4 +15,4 @@ springdoc.show-actuator=true
 springdoc.swagger-ui.groups-order=DESC
 springdoc.swagger-ui.disable-swagger-default-url=true
 
-logging.level.com.mycompany.moviesapi=DEBUG
+logging.level.com.ivanfranchin.moviesapi=DEBUG
