--- a/movies-api/pom.xml
+++ b/movies-api/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.mycompany</groupId>
+        <groupId>com.ivanfranchin</groupId>
         <artifactId>springboot-elk-prometheus-grafana</artifactId>
         <version>1.0.0</version>
         <relativePath>../pom.xml</relativePath>
@@ -16,7 +16,7 @@
     <properties>
         <spring-cloud.version>2021.0.3</spring-cloud.version>
         <logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
-        <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+        <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <springdoc-openapi.version>1.6.9</springdoc-openapi.version>
     </properties>
