--- a/movies-api/src/main/resources/application.properties
+++ b/movies-api/src/main/resources/application.properties
@@ -16,3 +16,4 @@ springdoc.swagger-ui.groups-order=DESC
 springdoc.swagger-ui.disable-swagger-default-url=true
 
 logging.level.com.ivanfranchin.moviesapi=DEBUG
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
