enable the building of native docker image

--- a/movies-api/src/main/resources/application.properties
+++ b/movies-api/src/main/resources/application.properties
@@ -14,6 +14,7 @@ management.health.probes.enabled=true
 springdoc.show-actuator=true
 springdoc.swagger-ui.groups-order=DESC
 springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.enable-native-support=true
 
 logging.level.com.ivanfranchin.moviesapi=DEBUG
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
