--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       test: "mysqladmin ping -u root -p$${MYSQL_ROOT_PASSWORD}"
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.9
     container_name: elasticsearch
     restart: unless-stopped
     ports:
@@ -29,7 +29,7 @@ services:
       test: "curl -f http://localhost:9200 || exit 1"
 
   logstash:
-    image: docker.elastic.co/logstash/logstash:8.5.3
+    image: docker.elastic.co/logstash/logstash:7.17.9
     container_name: logstash
     restart: unless-stopped
     ports:
@@ -42,13 +42,13 @@ services:
       test: "curl -f http://localhost:9600 || exit 1"
 
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.5.3
+    image: docker.elastic.co/kibana/kibana:7.17.9
     container_name: kibana
     restart: unless-stopped
     ports:
       - "5601:5601"
     environment:
-      ELASTICSEARCH_URL: http://elasticsearch:9200
+      ELASTICSEARCH_HOSTS: http://elasticsearch:9200
     depends_on:
       - elasticsearch
     healthcheck:
